[tool.poetry]
name = "graph-rl"
version = "0.1.0"
description = ""
authors = ["João Brás Simões <joaosbraz@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
torch = [
    {url = "https://download.pytorch.org/whl/cpu/torch-1.11.0-cp39-none-macosx_10_9_x86_64.whl", markers = "sys_platform == 'darwin'"},
    {url = "https://download.pytorch.org/whl/cu113/torch-1.11.0%2Bcu113-cp39-cp39-linux_x86_64.whl", markers = "sys_platform == 'linux'"}
]
networkx = "^2.6"
numpy = "^1.22"
matplotlib = "^3.5"
tqdm = "^4.62"
neptune-client = "^0.14"
hydra-core = "^1.1"
pytorch-lightning = "^1.6.0"
wandb = "^0.12.14"
torch-geometric = "^2.0.4"
torch-sparse =  [
    {url = "https://data.pyg.org/whl/torch-1.11.0%2Bcpu/torch_sparse-0.6.13-cp39-cp39-macosx_10_15_x86_64.whl", markers = "sys_platform == 'darwin'"},
    {url = "https://data.pyg.org/whl/torch-1.11.0%2Bcu113/torch_sparse-0.6.13-cp39-cp39-linux_x86_64.whl", markers = "sys_platform == 'linux'"}
]
torch-cluster = [
    {url = "https://data.pyg.org/whl/torch-1.11.0%2Bcpu/torch_cluster-1.6.0-cp39-cp39-macosx_10_15_x86_64.whl", markers = "sys_platform == 'darwin'"},
    {url = "https://data.pyg.org/whl/torch-1.11.0%2Bcu113/torch_cluster-1.6.0-cp39-cp39-linux_x86_64.whl", markers = "sys_platform == 'linux'"}
]
torch-spline-conv = [
    {url = "https://data.pyg.org/whl/torch-1.11.0%2Bcpu/torch_spline_conv-1.2.1-cp39-cp39-macosx_10_15_x86_64.whl", markers = "sys_platform == 'darwin'"},
    {url = "https://data.pyg.org/whl/torch-1.11.0%2Bcu113/torch_spline_conv-1.2.1-cp39-cp39-linux_x86_64.whl", markers = "sys_platform == 'linux'"}
]
torch-scatter = [
    {url = "https://data.pyg.org/whl/torch-1.11.0%2Bcpu/torch_scatter-2.0.9-cp39-cp39-macosx_10_15_x86_64.whl", markers = "sys_platform == 'darwin'"},
    {url = "https://data.pyg.org/whl/torch-1.11.0%2Bcu113/torch_scatter-2.0.9-cp39-cp39-linux_x86_64.whl", markers = "sys_platform == 'linux'"}
]

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
